# HololensQuickNav

./: .gitattributes  .gitignore  DeveloperGuide.md  How To Operate.docx  PatientDataSetup.md  Research.docx  Results.xlsx  Survey.docx  Workflow.md  readme.md  ~$w To Operate.docx  ~WRL0852.tmp
data/: readme.md
data/test/BTUM_001/: BTUM_001.xml
doc/references/: HoloLensNeurosurgery.bib
src/HoloQuickNav/: HoloQuickNav.Editor.csproj  HoloQuickNav.Player.csproj  HoloQuickNav.csproj  HoloQuickNav.sln  HoloQuickNav.userprefs
src/HoloQuickNav/App/: HoloQuickNav.sln  UnityCommon.props  UnityOverwrite.txt
src/HoloQuickNav/Assets/: LocationValues.cs  RotateOnSphere.cs  ScaleObject.cs  ShiftDirection.cs
src/HoloQuickNav/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
src/HoloQuickNav/UWP/: project.lock.json
src/HoloQuickNav2/: HoloQuickNav2.Editor.csproj  HoloQuickNav2.Player.csproj  HoloQuickNav2.csproj  HoloQuickNav2.sln  Unity.PackageManagerUI.Editor.csproj  UnityEditor.StandardEvents.csproj
src/HoloQuickNav2/App/: HoloQuickNav2.sln  UnityOverwrite.txt
src/HoloQuickNav2/Assets/: WSATestCertificate.pfx
src/HoloQuickNav2/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
src/HoloQuickNav2/UWP/: UnityOverwrite.txt  (+1 more)
src/HoloQuickNavSimStudy/: HoloQuickNavSimStudy.Editor.csproj  HoloQuickNavSimStudy.csproj  HoloQuickNavSimStudy.sln
src/HoloQuickNav_Metrics/HoloQuickNav_Metrics/: CMakeLists.txt
src/HoloQuickNav_Metrics/HoloQuickNav_Metrics/Metrics/: CMakeLists.txt  Metrics.py
(+265 files in other folders)
